erDiagram
    USERS {
        BIGINT id PK
        VARCHAR name
        VARCHAR email UK
        VARCHAR password
        VARCHAR role
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    SPORT_TYPES {
        BIGINT id PK
        VARCHAR name UK
        TEXT description
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    COURTS {
        BIGINT id PK
        BIGINT sport_type_id FK
        VARCHAR name
        VARCHAR code UK
        VARCHAR location
        INT capacity
        VARCHAR status
        TEXT description
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    TIME_SLOTS {
        BIGINT id PK
        VARCHAR label UK
        TIME start_time
        TIME end_time
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    COURT_SCHEDULES {
        BIGINT id PK
        BIGINT court_id FK
        TINYINT day_of_week
        BIGINT time_slot_id FK
        BOOLEAN is_open
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    BOOKINGS {
        BIGINT id PK
        BIGINT user_id FK
        VARCHAR purpose
        INT player_count
        VARCHAR contact_phone
        VARCHAR status
        BIGINT approved_by FK
        TIMESTAMP approved_at
        TEXT rejection_reason
        TEXT cancel_reason
        TIMESTAMP cancelled_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    BOOKING_DETAILS {
        BIGINT id PK
        BIGINT booking_id FK
        BIGINT court_id FK
        DATE booking_date
        BIGINT time_slot_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    USAGE_LOGS {
        BIGINT id PK
        BIGINT booking_detail_id FK
        BIGINT checked_by FK
        VARCHAR used_status
        TIMESTAMP checked_in_at
        TIMESTAMP checked_out_at
        TEXT note
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    USERS ||--o{ BOOKINGS : "tao"
    USERS ||--o{ BOOKINGS : "duyet"
    USERS ||--o{ USAGE_LOGS : "kiem_tra"
    SPORT_TYPES ||--o{ COURTS : "gom"
    COURTS ||--o{ COURT_SCHEDULES : "co_lich"
    TIME_SLOTS ||--o{ COURT_SCHEDULES : "ap_dung"
    BOOKINGS ||--o{ BOOKING_DETAILS : "chi_tiet"
    COURTS ||--o{ BOOKING_DETAILS : "duoc_dat"
    TIME_SLOTS ||--o{ BOOKING_DETAILS : "thuoc_ca"
    BOOKING_DETAILS ||--o| USAGE_LOGS : "ghi_nhan"
